[package]
name = "hr-manager"
version = "0.1.0"
edition = "2021"

[lib]
name = "hr_manager"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# JSI Bridging helpers
# Using 'anyhow' for error handling and 'serde' for data passing
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography (IronClaw inspiration)
ed25519-dalek = "2.0"
aes-gcm = "0.10"
rand = "0.8"

# Hardware Probing
sysinfo = "0.29"
